--- a/thrift_marketplace/staticfiles/css/details.css
+++ b/thrift_marketplace/staticfiles/css/details.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Monoton&display=swap');
 
 #product-details,
-#profile-details, #photo-details{
+#profile-details, #photo-details, #edit-page-all{
     /*position: relative;*/
     max-width: 1400px;
     padding: 10px;
@@ -13,12 +13,9 @@
     margin-top: 10px;
 
 }
-#product-details{
+#product-details,#profile-details, #edit-page-all{
     display: flex;
 
-}
-#profile-details{
-    display: flex;
 }
 
 #product-details>h1,
@@ -84,6 +81,15 @@
     height: auto;
 }
 
+#add-photos{
+    width: 500px;
+    height: 400px;
+    margin: 20px;
+    padding: 10px;
+    border: 3px solid #E2E8EA;
+    border-radius: 70px 0 70px;
+    background: rgba(6, 12, 33, 0.87);
+}
 
 .request-section, .rating-section{
     margin: 0 10px 30px 0;
@@ -234,7 +240,7 @@
 .post-button{
     height: 8%;
     padding: 14px;
-    margin: auto;
+    margin: 20px auto;
     font-size: 15px;
     color: rgb(255, 255, 255);
     box-shadow: 0 0 25px white;
@@ -246,11 +252,19 @@
     cursor: pointer;
 }
 
-#product-details .add-comments {
-    margin-top: 5px;
+
+#product-details{
+    margin: 20px 0;
+    height: auto;
 }
-.add-comments {
-    margin-top: 20px;
+
+.detail-product-edit{
+    float: right;
+}
+
+.add-comments{
+    margin: 30px 0;
+    height: auto;
 }
 
 .text-comments{
@@ -259,6 +273,7 @@
 .comment{
     padding: 0;
     margin: 0;
+    height: auto;
 }
 
 .user-name{
