--- a/thrift_marketplace/templates/accounts/email-greeting.html
+++ b/thrift_marketplace/templates/accounts/email-greeting.html
@@ -8,52 +8,41 @@
 </head>
 <body style="display: flex;
 			justify-content: center;">
-    <div style="display: flex;
+<div style="display: flex;
 			justify-content: center;
 			border: 3px solid rgb(65, 63, 63);
 			border-radius: 20px;
 			margin: 2%;
 			max-width: 620px;">
-        <div>
-            <header>
-            <nav style="">
-                <img style="width: 10rem;
-			 margin-top: 10px;
-			 margin-left: -4px;
-			 height: 3.3rem;"
-                     src="https://jdzejo.stripocdn.email/content/guids/3be6ad80-cf0f-461f-807a-b499c494e798/images/screenshot_1_roO.png"
-                     alt="Logo">
-            </nav>
-        </header>
-            <h1 style="text-align: center; color: rgb(65, 63, 63);
+    <section>
+        <h1 style="			text-align: center;
+                color: rgb(65, 63, 63);
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+
             Hello, {{ user }} !</h1>
 
-            <div style="display: flex;
+        <div style="display: flex;
                 justify-content: center;">
-                <img style="width: 70%;" id="cat-image"
+            <img style="width: 70%;" id="cat-image"
                  src="https://jdzejo.stripocdn.email/content/guids/CABINET_b71dddfca1f6a4c91ed66e0fc480ad7f/images/ezgifcomgifmaker.gif"
                  alt="gif cat">
-            </div>
-            <p style="max-width: 620px;
+        </div>
+
+        <p style="max-width: 620px;
             padding: 20px 20px 0 20px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
             Congratulations on creating your profile at Thrift Marketplace.
             Let's make the biggest marketplace community!
-            </p>
-            <p style="max-width: 620px;
+        </p>
+        <p style="max-width: 620px;
             padding: 20px 20px 0 20px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
             Sincerely,
-            Thrift Marketplace Team!
             <br>
-                <img style="width: 30%;
-            margin-top: 10px;
-            margin-left: -4px;"
-                 src="https://jdzejo.stripocdn.email/content/guids/3be6ad80-cf0f-461f-807a-b499c494e798/images/screenshot_1_roO.png"
-                 alt="Logo">
-            </p>
-        </div>
-    </div>
+            Thrift Marketplace Team!
+
+        </p>
+    </section>
+</div>
 </body>
 </html>
