--- a/thrift_marketplace/templates/base/base.html
+++ b/thrift_marketplace/templates/base/base.html
@@ -16,11 +16,11 @@
         <h1><a class="index-navigation" href="{% url 'index' %}">
             <span>THRIFT </span>MARKET<span>PLACE</span></a></h1>
         <nav>
-            <a href="#">Add product</a>
+            <a href="{% url 'add product' %}">Add product</a>
             {% if not request.user.is_authenticated %}
                 <a href="{% url 'login user' %}">Sign in</a>
             {% else %}
-                <a href="#">My Products</a>
+                <a href="{% url 'home page' pk=request.user.pk %}">My Products</a>
                 <a href="{% url 'details user' pk=request.user.pk %}">Profile</a>
                 <a href="{% url 'logout user' %}">Sign out</a>
             {% endif %}
