--- a/thrift_marketplace/templates/products/product_details.html
+++ b/thrift_marketplace/templates/products/product_details.html
@@ -3,30 +3,29 @@
 {% block content %}
     <section id="home-page">
         <h1>Product Details</h1>
-    <!--TODO: When product is available  -->
         <section id="product-details">
             <section class="info-product">
                 <div class="product-header">
-                    <!--If product has picture-->
+                    {% if product.product_picture %}
                         <img class="product-img" src="{{ product.product_picture.url }}" alt='product image'/>
-                    <!--else -->
+                    {% else %}
                         <img class="product-img" src="{% static 'images/no_posts.png' %}" alt='product image'/>
-
+                    {% endif %}
                 <br>
-                    <p> Product: <span class="description"></span></p>
-                    <p>Category: <span class="description"></span></p>
-                    <p>Price:<span class="description">  lv</span></p>
+                    <p> Product: <span class="description">{{ product.product_name }}</span></p>
+                    <p>Category: <span class="description">{{ product.category }}</span></p>
+                    <p>Price:<span class="description"> {{ product.price|floatformat:2 }} lv</span></p>
                 </div>
-            <!-- if product has description -->
-
-                <div class="product-header"><p>Description:<br><span class="description"> </span></p></div>
-                <!-- if is owner -->
-
-                    <div class="buttons">
-                        <a href="#" class="edit-button">Edit</a>
-                        <a href="#" class="delete-button">Delete</a>
+            {% if product.description %}
+                <div class="product-header"><p>Description:<br><span class="description"> {{ product.description }}</span></p></div>
+                {% endif %}
+                {% if is_owner %}
+                    <div class="detail-product-edit">
+{#                    <div class="buttons">#}
+                        <a href="{% url 'edit product' pk=product.pk %}" class="edit-button">Edit</a>
+                        <a href="{% url 'delete product' pk=product.pk %}" class="delete-button">Delete</a>
                     </div>
-
+                {% endif %}
                 <br>
             <!--TODO: When comment is available  -->
                 <div class="comments">
@@ -69,14 +68,13 @@
                 </section>
             </section>
         </section>
-    <!--TODO: When photo is available  -->
         <section id="photo-details">
             <section class="photo-section">
-                <!-- for every photo if photo has photo-->
-
-                        <img class="image-product" src="#" alt="product_photos">
-
-
+                {% for photo in product.photos_set.all %}
+                    {% if photo.photo_picture %}
+                        <img class="image-product" src="{{ photo.photo_picture.url }}" alt="product_photos">
+                    {% endif %}
+                {% endfor %}
             </section>
         </section>
     </section>
