--- a/thrift_marketplace/templates/common/notification.html
+++ b/thrift_marketplace/templates/common/notification.html
@@ -13,14 +13,16 @@
     <p style="max-width: 620px;
             padding: 20px 20px 0 20px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-        You have received a request for additional information about your product. Please visit our page and respond
-        promptly. You can find detailed information about the request in your profile.
+        You have received a request for additional information about your product. <span> </span> Please visit our page and respond
+        promptly. <span> </span> You can find detailed information about the request in your profile.
     </p>
     <br>
     <p style="max-width: 620px;
             padding: 20px 20px 0 20px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+
         Sincerely,
+        <br>
         Thrift Marketplace Team!
     </p>
 </div>
