--- a/thrift_marketplace/templates/404.html
+++ b/thrift_marketplace/templates/404.html
@@ -6,7 +6,7 @@
         <img src="{% static 'images/zillow-404-page-5f3ed6a6abaa5.gif' %}" alt="404 not found gif">
     </div>
     <div class="not-found">
-        <h1>Uh oh,<br> something broke.</h1>
+        <h1>Oh no,<br> something broke.</h1>
 
         <h3>Error 404 - page not found.</h3>
         <a href="{% url 'index' %}">
