--- a/thrift_marketplace/templates/accounts/email-greeting.html
+++ b/thrift_marketplace/templates/accounts/email-greeting.html
@@ -8,25 +8,17 @@
 </head>
 <body style="display: flex;
 			justify-content: center;">
-<div style="display: flex;
+<div style="display: block;
 			justify-content: center;
 			border: 3px solid rgb(65, 63, 63);
 			border-radius: 20px;
 			margin: 2%;
 			max-width: 620px;">
-    <section>
         <h1 style="			text-align: center;
                 color: rgb(65, 63, 63);
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
 
             Hello, {{ user }} !</h1>
-
-        <div style="display: flex;
-                justify-content: center;">
-            <img style="width: 70%;" id="cat-image"
-                 src="https://jdzejo.stripocdn.email/content/guids/CABINET_b71dddfca1f6a4c91ed66e0fc480ad7f/images/ezgifcomgifmaker.gif"
-                 alt="gif cat">
-        </div>
 
         <p style="max-width: 620px;
             padding: 20px 20px 0 20px;
@@ -42,7 +34,6 @@
             Thrift Marketplace Team!
 
         </p>
-    </section>
 </div>
 </body>
 </html>
